# Work-With-DataBases-and-Files-in-C-

./: CMakeLists.txt  detailpersonalinfo.cpp  detailpersonalinfo.h  group.cpp  logger.h  main.cpp  saveandloadtofile.cpp  saveandloadtofile.h  sourceDB.db  targetDB.db  test.h  user.cpp  user.h  validation.cpp  validation_test.cpp  validation_test.h  validationtest.cpp  validationtest.h
PayamPardaz_Project1/: CMakeLists.txt  databasemanager.cpp  databasemanager.h  detailpersonalinfo.cpp  detailpersonalinfo.h  group.cpp  group.h  logger.cpp  main.cpp  saveandloadtofile.h  user.cpp  user.h  validation.cpp  validation.h
